# app/controller/workingexperience/working_experience_get.go
@@ -14,22 +14,22 @@ import (
 // @Accept application/json
 // @Produce application/json
 // @Success 200 {object} []model.WorkingExperience "Success"
-// @Router /WorkingExperience [get]
+// @Router /working_experience [get]
 // @Tags WorkingExperience
 func GetAllWorkingExperience(c *fiber.Ctx) error {
 	db := services.DB
-	var working_experience []model.WorkingExperience
+
+	var working_exp []model.WorkingExperience
 	accept := c.Get("accept")
 	if !strings.EqualFold(accept, "application/json") {
 		return c.Status(400).JSON(fiber.Map{
 			"message": "invalid headers",
 		})
 	}
-	db.Model(&model.WorkingExperience{}).Find(&working_experience)
-
-	return c.Status(200).JSON(fiber.Map{
+	db.Model(&model.WorkingExperience{}).Find(&working_exp)
+	return c.JSON(fiber.Map{
 		"message": "success",
 		"status":  200,
-		"data":    working_experience,
+		"data":    working_exp,
 	})
 }
