# app/model/working_experience-api.go
@@ -1,5 +1,5 @@
 package model
 
 type WorkingExperienceAPI struct {
-	WorkingExperience string `json:"working_experience,omitempty"`
+	WorkingExperience *string `json:"working_experience,omitempty"`
 }
